--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "botbuilder": "^3.8.4",
+    "botbuilder-azure": "^3.0.4",
     "restify": "^5.0.0"
   },
   "devDependencies": {
