--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "botbuilder": "^3.8.4",
     "botbuilder-azure": "^3.0.4",
+    "dtrace-provider": "^0.8.5",
     "restify": "^5.0.0"
   },
   "devDependencies": {
