--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 # Bot Framework Credentials
-MICROSOFT_APP_ID=
-MICROSOFT_APP_PASSWORD=
+MICROSOFT_APP_ID=3e3575d2-1117-401e-9c81-5b047e20ad22
+MICROSOFT_APP_PASSWORD=kxaZQCT05?(sbwbREB098@@
+LUIS_APP_ID = d62d17469fc343039426f02d9ee3437c
+LUIS_KEY = 324cf29059154e8a82bcf0f3976cad88
+# MONGODB_USER="user" 
+# MONGODB_PASS="pass"
+# MONGODB_DATABASE="alma"
+MONGO_URI = mongodb://mongodb/alma
